# sns_ik

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake  package.xml
.docker/ci/: Dockerfile
.docker/ci-shadow-fixed/: Dockerfile
.docker/source/: Dockerfile
.travis_ci/: travis.sh  util.sh
include/sns_ikl/: IKL.hpp  sns_ikl.hpp  sns_ikl_math_utils.hpp  sns_velocity_ik.hpp
sns_ik/: CHANGELOG.rst  CMakeLists.txt  package.xml
sns_ik_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sns_ik_examples/config/: example_baxter_joint_limits.yaml  example_sawyer_joint_limits.yaml
sns_ik_examples/launch/: test_baxter.launch  test_ik_solvers.launch  test_sawyer.launch
sns_ik_examples/src/: ik_tests.cpp  test_sns_ik.cpp
sns_ik_kinematics_plugin/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sns_ik_lib/: CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  package.xml
sns_ik_lib/include/sns_ik/: fosns_velocity_ik.hpp  fsns_velocity_ik.hpp  osns_sm_velocity_ik.hpp  osns_velocity_ik.hpp  robot_model.hpp  sns_acc_ik_base.hpp  sns_acceleration_ik.hpp  sns_ik.hpp  sns_ik_base.hpp  sns_ik_data_utilities.hpp  sns_ik_math_utils.hpp  sns_ik_orig.hpp  sns_position_ik.hpp  sns_vel_ik_base.hpp  sns_vel_ik_base_interface.hpp  sns_velocity_ik.hpp
sns_ik_lib/matlab/: FindScaleFactor.m  LICENSE.txt  README.md  TEST_acc_ik_solvers.m  TEST_vel_ik_solvers.m  runTest_snsIk_acc.m  runTest_snsIk_acc_cs.m  runTest_snsIk_acc_mt.m  runTest_snsIk_vel.m  runTest_snsIk_vel_cs.m  runTest_snsIk_vel_mt.m  snsIk_acc_QP.m  snsIk_acc_QP_mt.m  snsIk_acc_opt.m  snsIk_acc_rr.m  snsIk_acc_rr_cs.m  snsIk_acc_rr_mt.m  snsIk_vel_QP.m  snsIk_vel_QP_mt.m  snsIk_vel_basic.m  snsIk_vel_opt.m  snsIk_vel_rr.m  snsIk_vel_rr_cs.m  snsIk_vel_rr_mt.m
sns_ik_lib/src/: fosns_velocity_ik.cpp  fsns_velocity_ik.cpp  osns_sm_velocity_ik.cpp  osns_velocity_ik.cpp  rng_utilities.cpp  robot_model.cpp  sns_acc_ik_base.cpp  sns_acceleration_ik.cpp  sns_ik.cpp  sns_ik_base.cpp  sns_ik_data_utilities.cpp  sns_ik_math_utils.cpp  sns_ik_math_utils.hpp  sns_position_ik.cpp  sns_vel_ik_base.cpp  sns_vel_ik_base_interface.cpp  sns_velocity_ik.cpp  test_sns_ik.cpp
sns_ik_lib/test/: rng_utilities.cpp  rng_utilities.hpp  rng_utilities_test.cpp  robot_model.cpp  robot_model.hpp  sawyer_model.cpp  sawyer_model.hpp  sns_acc_ik_base_test.cpp  sns_ik_acc_test.cpp  sns_ik_data_utilities_test.cpp  sns_ik_math_utils_test.cpp  sns_ik_pos_test.cpp  sns_ik_vel_test.cpp  sns_vel_ik_base_test.cpp  test_utilities.cpp  test_utilities.hpp
sns_ik_lib/utilities/: sns_ik_math_utils.cpp  sns_ik_math_utils.hpp  sns_linear_solver.cpp  sns_linear_solver.hpp
src/: IKL.cpp  sns_ikl.cpp  sns_ikl_math_utils.cpp  sns_velocity_ik.cpp  testIKL.cpp  test_ikl.cpp
