<?xml version="1.0"?>
<package>
  <name>sns_ik_examples</name>
  <version>0.2.3</version>
  <description>
   Example programs for the Saturation in the Null Space (SNS)
   Inverse Kinematic Library.
  </description>

  <author>Fabrizio Flacco</author>
  <author>Ian McMahon</author>
  <author>Forrest Rogers-Marcovitz</author>
  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/sns_ikl</url>
  <url type="repository">
    https://github.com/RethinkRobotics-opensource/sns_ikl
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics-opensource/sns_ikl/issues
  </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sns_ik_lib</build_depend>
  <!-- Uncomment the following to run tests against trac_ik -->
  <!-- build_depend>trac_ik_lib</build_depend -->
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>

</package>
