<?xml version="1.0"?>
<package>
  <name>sns_ik_lib</name>
  <version>0.2.3</version>
  <description>
   Saturation in the Null Space (SNS) Inverse Kinematic Library.
   SNS is a real-time Cartesian IK solver for uses the redundancy
   in the supplied kinematic chain for collision avoidance,
   joint motion optimization, or additional task objectives or
   soft constraints.
  </description>

  <author>Fabrizio Flacco</author>
  <author>Ian McMahon</author>
  <author>Forrest Rogers-Marcovitz</author>
  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/sns_ikl</url>
  <url type="repository">
    https://github.com/RethinkRobotics-opensource/sns_ikl
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics-opensource/sns_ikl/issues
  </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>

</package>
